gadjid/src/snapshots/gadjid__test__(small) CPDAG1-vs-CPDAG2.snap
---
source: src/lib.rs
expression: "test(\"20001.CPDAG-10\", \"20002.CPDAG-10\")"
---
g_guess: 20002.CPDAG-10
g_true: 20001.CPDAG-10
ts:
  - 9
  - 3
  - 4
  - 0
  - 6
ys:
  - 4
  - 0
  - 4
  - 0
  - 0
zs:
  - []
  - []
  - []
  - - 2
    - 3
    - 6
    - 9
  - - 5
    - 8
nams:
  - []
  - - 1
    - 5
    - 6
    - 9
  - - 0
    - 5
  - - 4
  - - 1
    - 3
    - 5
    - 9
nvas:
  - - 1
    - 2
    - 3
    - 5
    - 6
    - 7
  - - 1
    - 5
    - 6
    - 9
  - - 0
    - 5
  - - 2
    - 3
    - 4
    - 6
    - 9
  - - 0
    - 1
    - 2
    - 3
    - 4
    - 5
    - 7
    - 8
    - 9
pa_true_1st_T:
  - 1
  - 2
  - 3
an_true_1st_T:
  - 1
  - 2
  - 3
  - 9
ch_true_1st_T: []
de_true_1st_T:
  - 9
poss_de_true_1st_T:
  - 9
prop_an_true_1st_T_and_1st_Y:
  - 4
shd:
  - 0.5111111111111111
  - 23
oset_aid:
  - 0.4111111111111111
  - 37
parent_aid:
  - 0.5111111111111111
  - 46
ancestor_aid:
  - 0.4222222222222222
  - 38
