gadjid/src/snapshots/gadjid__test__(small) CPDAG3-vs-CPDAG4.snap
---
source: src/lib.rs
expression: "test(\"20003.CPDAG-10\", \"20004.CPDAG-10\")"
---
g_guess: 20004.CPDAG-10
g_true: 20003.CPDAG-10
ts:
  - 7
  - 9
  - 5
  - 3
  - 2
ys:
  - 4
  - 6
  - 1
  - 7
  - 0
zs:
  - - 0
    - 5
    - 6
    - 9
  - []
  - []
  - - 6
    - 8
    - 9
  - - 0
    - 9
nams:
  - - 1
    - 4
    - 8
    - 9
  - - 1
    - 4
    - 7
    - 8
  - []
  - []
  - - 0
nvas:
  - - 0
    - 1
    - 4
    - 5
    - 6
    - 8
    - 9
  - - 1
    - 4
    - 7
    - 8
  - []
  - - 6
    - 8
    - 9
  - - 0
    - 9
pa_true_1st_T: []
an_true_1st_T:
  - 7
ch_true_1st_T:
  - 1
  - 4
de_true_1st_T:
  - 1
  - 4
  - 7
poss_de_true_1st_T:
  - 1
  - 4
  - 7
  - 8
  - 9
prop_an_true_1st_T_and_1st_Y:
  - 4
  - 5
  - 9
shd:
  - 0.4666666666666667
  - 21
oset_aid:
  - 0.37777777777777777
  - 34
parent_aid:
  - 0.43333333333333335
  - 39
ancestor_aid:
  - 0.37777777777777777
  - 34
