gadjid/src/snapshots/gadjid__test__(small) CPDAG5-vs-CPDAG6.snap
---
source: src/lib.rs
expression: "test(\"20005.CPDAG-10\", \"20006.CPDAG-10\")"
---
g_guess: 20006.CPDAG-10
g_true: 20005.CPDAG-10
ts:
  - 6
  - 7
  - 2
  - 9
  - 9
ys:
  - 3
  - 2
  - 2
  - 0
  - 7
zs:
  - []
  - []
  - - 5
    - 8
  - []
  - []
nams:
  - []
  - []
  - - 0
    - 1
    - 5
    - 6
    - 7
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 5
    - 6
    - 7
    - 8
  - - 0
    - 1
    - 2
    - 5
    - 6
    - 7
    - 8
nvas:
  - - 0
    - 1
    - 2
    - 4
    - 5
    - 7
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 4
    - 5
    - 6
    - 8
    - 9
  - - 0
    - 1
    - 3
    - 4
    - 5
    - 6
    - 7
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 5
    - 6
    - 7
    - 8
  - - 0
    - 1
    - 2
    - 5
    - 6
    - 7
    - 8
pa_true_1st_T:
  - 7
  - 9
an_true_1st_T:
  - 0
  - 4
  - 6
  - 7
  - 9
ch_true_1st_T: []
de_true_1st_T:
  - 6
poss_de_true_1st_T:
  - 6
prop_an_true_1st_T_and_1st_Y:
  - 3
shd:
  - 0.35555555555555557
  - 16
oset_aid:
  - 0.4888888888888889
  - 44
parent_aid:
  - 0.6888888888888889
  - 62
ancestor_aid:
  - 0.4888888888888889
  - 44
