gadjid/src/snapshots/gadjid__test__(small) CPDAG7-vs-CPDAG8.snap
---
source: src/lib.rs
expression: "test(\"20007.CPDAG-10\", \"20008.CPDAG-10\")"
---
g_guess: 20008.CPDAG-10
g_true: 20007.CPDAG-10
ts:
  - 5
  - 3
  - 1
  - 9
  - 7
ys:
  - 4
  - 2
  - 3
  - 2
  - 8
zs:
  - []
  - []
  - []
  - []
  - []
nams:
  - []
  - []
  - []
  - []
  - []
nvas:
  - []
  - []
  - []
  - []
  - []
pa_true_1st_T: []
an_true_1st_T:
  - 5
ch_true_1st_T: []
de_true_1st_T:
  - 5
poss_de_true_1st_T:
  - 5
prop_an_true_1st_T_and_1st_Y:
  - 4
shd:
  - 1
  - 45
oset_aid:
  - 1
  - 90
parent_aid:
  - 1
  - 90
ancestor_aid:
  - 1
  - 90
