gadjid/src/snapshots/gadjid__test__(small) CPDAG9-vs-CPDAG10.snap
---
source: src/lib.rs
expression: "test(\"20009.CPDAG-10\", \"20010.CPDAG-10\")"
---
g_guess: 20010.CPDAG-10
g_true: 20009.CPDAG-10
ts:
  - 3
  - 9
  - 2
  - 4
  - 3
ys:
  - 5
  - 6
  - 2
  - 3
  - 4
zs:
  - []
  - []
  - []
  - - 0
    - 5
  - []
nams:
  - - 0
    - 1
    - 2
    - 4
    - 5
    - 6
    - 7
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 3
    - 4
    - 5
    - 6
    - 7
    - 8
  - - 0
    - 1
    - 3
    - 4
    - 5
    - 6
    - 7
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 3
    - 5
    - 6
    - 7
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 4
    - 5
    - 6
    - 7
    - 8
    - 9
nvas:
  - - 0
    - 1
    - 2
    - 4
    - 5
    - 6
    - 7
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 3
    - 4
    - 5
    - 6
    - 7
    - 8
  - - 0
    - 1
    - 3
    - 4
    - 5
    - 6
    - 7
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 3
    - 5
    - 6
    - 7
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 4
    - 5
    - 6
    - 7
    - 8
    - 9
pa_true_1st_T: []
an_true_1st_T:
  - 3
ch_true_1st_T: []
de_true_1st_T:
  - 3
poss_de_true_1st_T:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
prop_an_true_1st_T_and_1st_Y:
  - 5
shd:
  - 0.3333333333333333
  - 15
oset_aid:
  - 0.5666666666666667
  - 51
parent_aid:
  - 0.5666666666666667
  - 51
ancestor_aid:
  - 0.5666666666666667
  - 51
