gadjid/src/snapshots/gadjid__test__(small) DAG1-vs-DAG2.snap
---
source: src/lib.rs
expression: "test(\"20001.DAG-10\", \"20002.DAG-10\")"
---
g_guess: 20002.DAG-10
g_true: 20001.DAG-10
ts:
  - 8
  - 6
  - 8
  - 7
  - 8
ys:
  - 9
  - 9
  - 0
  - 2
  - 4
zs:
  - - 2
  - - 5
    - 8
  - - 2
  - - 4
    - 6
    - 9
  - - 2
nams:
  - []
  - []
  - []
  - []
  - []
nvas:
  - - 2
  - - 0
    - 1
    - 2
    - 3
    - 4
    - 5
    - 7
    - 8
    - 9
  - - 2
  - - 1
    - 2
    - 3
    - 4
    - 5
    - 6
    - 9
  - - 2
pa_true_1st_T: []
an_true_1st_T:
  - 8
ch_true_1st_T: []
de_true_1st_T:
  - 8
poss_de_true_1st_T:
  - 8
prop_an_true_1st_T_and_1st_Y:
  - 1
  - 2
  - 3
  - 6
  - 9
shd:
  - 0.5111111111111111
  - 23
oset_aid:
  - 0.25555555555555554
  - 23
parent_aid:
  - 0.34444444444444444
  - 31
ancestor_aid:
  - 0.2222222222222222
  - 20
