gadjid/src/snapshots/gadjid__test__(small) DAG3-vs-DAG4.snap
---
source: src/lib.rs
expression: "test(\"20003.DAG-10\", \"20004.DAG-10\")"
---
g_guess: 20004.DAG-10
g_true: 20003.DAG-10
ts:
  - 4
  - 2
  - 9
  - 7
  - 8
ys:
  - 9
  - 2
  - 2
  - 3
  - 4
zs:
  - - 2
    - 5
  - - 0
    - 9
  - []
  - - 0
    - 5
    - 6
    - 9
  - []
nams:
  - []
  - []
  - []
  - []
  - []
nvas:
  - - 1
    - 2
    - 5
    - 7
    - 8
    - 9
  - - 0
    - 9
  - - 1
    - 4
    - 7
    - 8
  - - 0
    - 1
    - 4
    - 5
    - 6
    - 8
    - 9
  - - 1
    - 4
    - 7
pa_true_1st_T:
  - 5
  - 7
  - 9
an_true_1st_T:
  - 4
  - 5
  - 7
  - 8
  - 9
ch_true_1st_T: []
de_true_1st_T:
  - 4
poss_de_true_1st_T:
  - 4
prop_an_true_1st_T_and_1st_Y:
  - 7
  - 8
  - 9
shd:
  - 0.4666666666666667
  - 21
oset_aid:
  - 0.16666666666666666
  - 15
parent_aid:
  - 0.26666666666666666
  - 24
ancestor_aid:
  - 0.16666666666666666
  - 15
