gadjid/src/snapshots/gadjid__test__(small) DAG9-vs-DAG10.snap
---
source: src/lib.rs
expression: "test(\"20009.DAG-10\", \"20010.DAG-10\")"
---
g_guess: 20010.DAG-10
g_true: 20009.DAG-10
ts:
  - 4
  - 9
  - 9
  - 8
  - 5
ys:
  - 1
  - 7
  - 0
  - 1
  - 9
zs:
  - - 0
    - 5
  - []
  - []
  - - 6
  - - 7
nams:
  - []
  - []
  - []
  - []
  - []
nvas:
  - - 0
    - 2
    - 3
    - 5
    - 6
    - 7
    - 9
  - - 0
    - 1
    - 2
    - 3
    - 6
    - 7
    - 8
  - - 0
    - 1
    - 2
    - 3
    - 6
    - 7
    - 8
  - - 0
    - 1
    - 2
    - 3
    - 4
    - 5
    - 6
    - 7
    - 9
  - - 4
    - 7
    - 9
pa_true_1st_T:
  - 9
an_true_1st_T:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 6
  - 7
  - 8
  - 9
ch_true_1st_T:
  - 5
de_true_1st_T:
  - 4
  - 5
poss_de_true_1st_T:
  - 4
  - 5
prop_an_true_1st_T_and_1st_Y:
  - 1
shd:
  - 0.3333333333333333
  - 15
oset_aid:
  - 0.4777777777777778
  - 43
parent_aid:
  - 0.5777777777777777
  - 52
ancestor_aid:
  - 0.5666666666666667
  - 51
