gadjid/src/snapshots/gadjid__test__CPDAG1-vs-CPDAG2.snap
---
source: src/lib.rs
expression: "test(\"10001.CPDAG-100\", \"10002.CPDAG-100\")"
---
g_guess: 10002.CPDAG-100
g_true: 10001.CPDAG-100
ts:
  - 3
  - 72
  - 31
  - 63
  - 2
ys:
  - 24
  - 55
  - 38
  - 69
  - 63
zs:
  - []
  - - 0
    - 1
    - 6
    - 7
    - 10
    - 12
    - 20
    - 25
    - 38
    - 42
    - 44
    - 50
    - 52
    - 56
    - 63
    - 70
  - - 2
    - 7
    - 17
    - 23
    - 25
    - 28
  - - 5
    - 10
    - 11
    - 19
    - 22
    - 26
    - 27
    - 28
    - 31
  - []
nams:
  - - 0
    - 1
    - 5
    - 6
    - 7
    - 10
    - 11
    - 13
    - 14
    - 15
    - 16
    - 17
    - 18
    - 19
    - 20
    - 21
    - 22
    - 23
    - 24
    - 25
    - 26
    - 27
    - 28
    - 29
    - 30
    - 31
    - 32
    - 33
    - 34
    - 35
    - 36
    - 37
    - 38
    - 39
    - 40
    - 41
    - 42
    - 43
    - 44
    - 45
    - 46
    - 47
    - 48
    - 49
    - 50
    - 51
    - 52
    - 53
    - 54
    - 55
    - 56
    - 57
    - 58
    - 59
    - 60
    - 61
    - 62
    - 63
    - 64
    - 65
    - 66
    - 67
    - 68
    - 69
    - 70
    - 71
    - 72
    - 73
    - 74
    - 75
    - 76
    - 77
    - 78
    - 79
    - 80
    - 81
    - 82
    - 83
    - 84
    - 85
    - 86
    - 87
    - 88
    - 89
    - 90
    - 91
    - 92
    - 93
    - 94
    - 95
    - 96
    - 97
    - 98
    - 99
  - []
  - []
  - []
  - []
nvas:
  - - 0
    - 1
    - 5
    - 6
    - 7
    - 10
    - 11
    - 13
    - 14
    - 15
    - 16
    - 17
    - 18
    - 19
    - 20
    - 21
    - 22
    - 23
    - 24
    - 25
    - 26
    - 27
    - 28
    - 29
    - 30
    - 31
    - 32
    - 33
    - 34
    - 35
    - 36
    - 37
    - 38
    - 39
    - 40
    - 41
    - 42
    - 43
    - 44
    - 45
    - 46
    - 47
    - 48
    - 49
    - 50
    - 51
    - 52
    - 53
    - 54
    - 55
    - 56
    - 57
    - 58
    - 59
    - 60
    - 61
    - 62
    - 63
    - 64
    - 65
    - 66
    - 67
    - 68
    - 69
    - 70
    - 71
    - 72
    - 73
    - 74
    - 75
    - 76
    - 77
    - 78
    - 79
    - 80
    - 81
    - 82
    - 83
    - 84
    - 85
    - 86
    - 87
    - 88
    - 89
    - 90
    - 91
    - 92
    - 93
    - 94
    - 95
    - 96
    - 97
    - 98
    - 99
  - - 0
    - 1
    - 6
    - 7
    - 10
    - 12
    - 20
    - 25
    - 38
    - 42
    - 44
    - 50
    - 52
    - 56
    - 63
    - 70
  - - 2
    - 7
    - 17
    - 23
    - 25
    - 28
  - - 5
    - 10
    - 11
    - 19
    - 22
    - 26
    - 27
    - 28
    - 31
  - []
pa_true_1st_T: []
an_true_1st_T:
  - 3
ch_true_1st_T:
  - 5
  - 11
  - 13
  - 18
  - 20
  - 23
  - 39
  - 49
  - 54
  - 55
  - 58
  - 60
  - 66
  - 68
  - 75
  - 76
  - 78
  - 79
  - 84
  - 88
  - 91
de_true_1st_T:
  - 3
  - 5
  - 6
  - 11
  - 13
  - 16
  - 18
  - 19
  - 20
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
poss_de_true_1st_T:
  - 0
  - 1
  - 3
  - 5
  - 6
  - 7
  - 10
  - 11
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
prop_an_true_1st_T_and_1st_Y:
  - 0
  - 1
  - 2
  - 4
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 14
  - 15
  - 18
  - 23
  - 24
shd:
  - 0.006464646464646465
  - 32
oset_aid:
  - 0.023636363636363636
  - 234
parent_aid:
  - 0.04080808080808081
  - 404
ancestor_aid:
  - 0
  - 0
